# 2fa_attack

./: ATTACK_1.md  ATTACK_2.md  README.md  SETUP.md  deploy.sh  ntp.conf  package.sh  reset_arp.sh  setup.sh  spoof.sh  sync_time.sh
otpgen/: .gitignore  Cargo.toml  push-bins.sh
otpgen/src/: attack.rs  client.rs  lib.rs  server.rs  shared-secret
