[package]
name = "mission1"
version = "0.1.0"
authors = ["Ben Longo <benlongo9807@gmail.com>"]
edition = "2018"

[lib]
name = "otpgen"
path = "src/lib.rs"

[[bin]]
name = "auth-server"
path = "src/server.rs"

[[bin]]
name = "auth-client"
path = "src/client.rs"

[[bin]]
name = "attack"
path = "src/attack.rs"

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"

rust-crypto = "0.2.36"
bytes = "0.4"
hex = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

etherparse = "0.8.2"
pcap = "0.7.0"

curl = "0.4.25"

httparse = "1.3.4"
